--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -5,10 +5,158 @@ body,
   height: 100vh;
   overflow: hidden;
   font-size: 50px;
+
+  * {
+    box-sizing: border-box;
+  }
 }
 
 i {
   &.reverse {
     transform: rotateZ(180deg);
+  }
+}
+
+.el-form-item__error {
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
+  font-size: 16px;
+}
+
+.el-select {
+  width: 100%;
+}
+
+.contextmenu {
+  position: fixed;
+  background: #ffffff;
+  box-shadow: 1px 1px 3px rgb(0 0 0 / 25%);
+  border-radius: 2px;
+
+  >div {
+    padding: 0 20px;
+    line-height: 30px;
+    border-top: 1px solid #EBEEF5;
+    cursor: pointer;
+
+    &:first-child {
+      border-top: 0;
+    }
+  }
+}
+
+.el-menu--popup-right-start {
+  background: #292f4c;
+
+  .el-menu-item {
+    color: #a9b7d0;
+
+    &:focus,
+    &:hover {
+      outline: 0;
+      background-color: transparent;
+    }
+
+    &.is-active {
+      color: #409EFF;
+    }
+  }
+}
+
+.el-tooltip {
+  outline: none;
+}
+
+.el-dialog__wrapper {
+  overflow: hidden;
+
+  .el-dialog {
+    margin-top: 10vh !important;
+
+    .el-dialog__body {
+      padding: 0;
+    }
+
+    .el-dialog__header {
+      display: none;
+    }
+
+    .el-dialog__footer {
+      line-height: 0;
+    }
+  }
+}
+
+.vue-grid-item,
+.widget-item {
+  touch-action: none;
+}
+
+// 抽屉
+.el-drawer {
+  background: #292f4c;
+  outline: none;
+  box-shadow: .1rem 0 .8rem rgba(0, 0, 0, 1);
+  min-width: 6rem;
+  width: 40% !important;
+  min-width: 8rem !important;
+
+  .form-box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .title {
+      color: #C0C4CC;
+      text-align: center;
+      font-size: .5rem;
+      border-bottom: .02rem solid #909399;
+      line-height: 1rem;
+    }
+
+    .form-container {
+      flex: 1;
+      height: 0;
+      padding: .2rem .6rem;
+      max-height: calc(100% - 127px);
+      overflow: auto;
+
+      .el-form {
+        height: 100%;
+
+        .el-form-item__label {
+          color: #C0C4CC;
+        }
+
+        .el-select {
+          width: 100%;
+        }
+
+        .el-date-editor {
+          width: 100%;
+        }
+
+        .el-input-number {
+          width: 100%;
+        }
+
+        .el-upload {
+          width: 100%;
+        }
+
+        .el-cascader {
+          width: 100%;
+        }
+      }
+    }
+
+    .button-box {
+      padding: .4rem;
+      display: flex;
+
+      .el-button {
+        flex: 1;
+      }
+    }
   }
 }
